@@ -9,6 +9,8 @@ Matthieu Casanova for contributing to this release.
 
 {{{ Bug fixes
 
+- Fixed #3163058: middle mouse button paste doesn't respect gutter selection.
+  (Shlomy Reinstein)
 
 }}}
 {{{ API Changes
